--- a/relayd.conf
+++ b/relayd.conf
@@ -2,11 +2,12 @@
     "listeners": {
         "UDP": {
             "port": "19090",
-            "maxPacketSize": "65536",
+            "maxMsgSize": "65536",
             "readBuffer": "16777216"
         },
         "TCP": {
             "port": "19091",
+            "maxMsgSize": "65536",
             "readBuffer": "16777216"
         }
     },
@@ -14,23 +15,12 @@
         "UDP": {
             "server": "127.0.0.1",
             "max_buffer_size": "100",
-            "port": "8080"
+            "port": "10001"
         },
         "TCP": {
             "server": "127.0.0.1",
             "max_buffer_size": "100",
-            "port": "8080"
-        },
-        "Kafka": {
-            "acks": "-1",
-            "ack_timeout": "5000",
-            "batch_n": "128",
-            "batch_t": "5",
-            "brokers": ["127.0.0.1:9092", "127.0.0.2:9092"],
-            "close_timeout": "0",
-            "compression": "none",
-            "retries": "10",
-            "stagger": "100"
+            "port": "10002"
         }
     }
 }
